--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,19 @@ ul{
 }
 html{
     font-size: 62.5%;
+
 }
 body{
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     font-size: 1.6rem;
     background-color:#F8F4E8;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width:1440px ;
+    margin: 0 auto;
+
 }
 header {
     display: flex;
@@ -55,7 +62,13 @@ header ul._menu {
     column-gap: 2rem;
 }
 
-
+._side-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 2rem;
+}
 
 button._action-button{
     display: flex;
@@ -67,7 +80,6 @@ button._action-button{
     background-color: #007BFF;
     border-radius:  0.5rem;
     color: #fff;
-    font-weight: 400;
 }
 
 main._container{
@@ -76,4 +88,145 @@ main._container{
     align-items: center;
     justify-content: center;
     padding: 0 4rem;
+    column-gap: 8rem;
 }
+
+section._info-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex:2;
+}
+
+._info-container h1{
+    font-family: 'Playfair Display', serif;
+    font-size: 5rem;
+    max-width: 50rem;
+}
+._info-container p{
+    font-size: 1.6rem;
+    max-width: 50rem;
+}
+
+._news-container {
+    margin: 2rem 0;
+    display: flex;
+    column-gap: 2rem;
+    width: 100%;
+    padding: 0 4rem 0 0;
+}
+
+._news-container input{
+   flex:1;
+   border:none;
+   border-radius:  0.5rem;
+   padding: 0 2rem;
+
+}
+._no-spam {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+ 
+ }
+
+section._image-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex:2;
+    overflow: hidden;
+}
+._image-container img{
+    width: 37rem;
+}
+._first-layer{
+    position: relative;
+    width: 35rem;
+
+}
+._first-layer::before{
+    content: "";
+    position: absolute;
+    z-index: -3;
+    width: 30rem;
+    width: 200%;
+    height: 200%;
+    transform: rotate(-30deg);
+    background-image: url(./Assets/Blue\ Shape.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    top: -50%;
+    left: -50%;
+}
+._second-layer{
+    position: relative;
+    width: 35rem;
+
+    
+}
+._second-layer::before{
+    content: "";
+    position: absolute;
+    z-index: -2;
+    width: 30rem;
+    width: 200%;
+    height: 200%;
+    transform: rotate(-20deg);
+    background-image: url(./Assets/Pink\ Shape.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    top: -50%;
+    left: -50%;
+}
+._third-layer{
+    position: relative;
+    width: 35rem;
+    
+}
+._third-layer::before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 30rem;
+    width: 200%;
+    height: 200%; 
+    background-image: url(./Assets/Purple\ Shape.svg);
+    transform: rotate(-10deg);
+    background-repeat: no-repeat;
+    background-position: center;
+    top: -50%;
+    left: -50%;
+
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 2.5rem 4rem;
+}
+
+footer ul._social{
+    display: flex;
+    column-gap: 2rem ;
+}
+
+footer ._chat{
+    display: flex;
+    column-gap: 2rem ;
+    align-items: center;
+}
+
+footer ._chat p._have-questions{
+    font-family: 'Playfair Display', serif;
+    font-size: 1.6rem;
+}
+
+footer ._chat p._talk{
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
